--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- welcome-section -->
     <section>
         <div class="bg-gradient welcome-section d-flex justify-content-center align-items-center flex-column">
-            <h1 class="text-white">Hey, I am <br class="d-md-none d-block"> Mohammad Naeem Tahir</h1>
+            <h1 class="text-white mt-5 pt-5">Hey, I am <br class="d-md-none d-block"> Mohammad Naeem Tahir</h1>
             <p class="text-primary">a web developer</p>
         </div>
     </section>
