--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <!-- js bundle  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous" defer></script>
 
-    <!-- poppins font -->
+    <!-- rubik font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
     <!-- raleway font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,6 +40,9 @@
 
     <!-- css style sheet -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- custom js -->
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
@@ -55,16 +58,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 text-white" href="#home">Home</a>
+                            <a class="nav-link fs-5 fw-bold text-white" href="#home">Home</a>
                         </li>
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 text-white" href="#about">About</a>
+                            <a class="nav-link fs-5 fw-bold text-white" href="#about">About</a>
                         </li>
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 text-white" href="#portfolio">Portfolio</a>
+                            <a class="nav-link fs-5 fw-bold text-white" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 text-white" href="#contact">Contact</a>
+                            <a class="nav-link fs-5 fw-bold text-white" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -74,9 +77,9 @@
 
     <!-- welcome-section -->
     <section>
-        <div class="bg-gradient welcome-section d-flex justify-content-center align-items-center flex-column">
-            <h1 class="text-white mt-5 pt-5">Hey, I am <br class="d-md-none d-block"> Mohammad Naeem Tahir</h1>
-            <p class="text-primary">a web developer</p>
+        <div class="bg-primary welcome-section d-flex justify-content-center align-items-center flex-column text-white">
+            <h1 class="mt-5 fa">Hey, I am <br class="d-md-none d-block"> Mohammad Naeem Tahir</h1>
+            <h3 class="fw-bold">a web developer</h3>
         </div>
     </section>
 
