--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- js bundle  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous" defer></script>
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"
+        defer></script>
 
     <!-- rubik font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- custom js -->
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
@@ -168,7 +168,7 @@
                                 <h3 class="text-center">Project M</h3>
                                 <div class="text-center">
                                     <a href="https://projectm.techrepublica.com/home" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                 <h3 class="text-center">Capital City Funds</h3>
                                 <div class="text-center">
                                     <a href="https://capitalcityfunds.com/" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                                 <h3 class="text-center">Invoice Generator</h3>
                                 <div class="text-center">
                                     <a href="https://invoice-generator.com" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <h3 class="text-center">SINFONIASUBLIME</h3>
                                 <div class="text-center">
                                     <a href="https://ssdistro.com/login" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 <h3 class="text-center">STOREDASH</h3>
                                 <div class="text-center">
                                     <a href="http://sdv2.etradeverse.com/super_admin" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                                 <h3 class="text-center">Hotel Point</h3>
                                 <div class="text-center">
                                     <a href="https://hotelpoint.techrepublica.com/login" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View</a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -308,6 +308,10 @@
             reserved.
         </div>
     </footer>
+
+
+
+
 </body>
 
 </html>
