--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     <header id="home">
         <nav class="navbar navbar-expand-md bg-primary fixed-top">
             <div class="container">
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler ms-auto border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars-staggered text-white"></i>
+                    <!-- <span class="navbar-toggler-icon"></span> -->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
@@ -128,7 +129,7 @@
                                     Resume to be uploaded yet.
                                 </div>
                                 <div class="modal-footer border-0">
-                                    <button type="button" class="btn btn-danger btn-sm px-5"
+                                    <button type="button" class="btn btn-primary border-0 btn-sm px-5"
                                         data-bs-dismiss="modal">OK</button>
                                 </div>
                             </div>
@@ -142,7 +143,7 @@
                         more apparent with the theory and practicality of the different fields merging together.</p>
 
                     <div class="text-center mt-md-5">
-                        <a href="#contact" class="btn btn-danger text-white">Contact Me</a>
+                        <a href="#contact" class="btn btn-primary border-0 text-white">Contact Me</a>
                     </div>
                 </div>
             </div>
@@ -168,7 +169,8 @@
                                 <h3 class="text-center">Project M</h3>
                                 <div class="text-center">
                                     <a href="https://projectm.techrepublica.com/home" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +187,8 @@
                                 <h3 class="text-center">Capital City Funds</h3>
                                 <div class="text-center">
                                     <a href="https://capitalcityfunds.com/" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +205,8 @@
                                 <h3 class="text-center">Invoice Generator</h3>
                                 <div class="text-center">
                                     <a href="https://invoice-generator.com" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +224,8 @@
                                 <h3 class="text-center">SINFONIASUBLIME</h3>
                                 <div class="text-center">
                                     <a href="https://ssdistro.com/login" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +242,8 @@
                                 <h3 class="text-center">STOREDASH</h3>
                                 <div class="text-center">
                                     <a href="http://sdv2.etradeverse.com/super_admin" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +260,8 @@
                                 <h3 class="text-center">Hotel Point</h3>
                                 <div class="text-center">
                                     <a href="https://hotelpoint.techrepublica.com/login" target="_blank"
-                                        class="btn btn-warning rounded-pill px-5 py-1">View <i class="ms-3 fa-solid fa-eye"></i></a>
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -271,28 +278,40 @@
     <section>
         <div class="bg-dark" id="contact">
             <div class="py-5 container">
-                <h2 class="text-white text-center my-5">
-                    Let's Work Togeather
-                </h2>
-                <div class="text-center contact-icons">
-                    <a class="mx-2 text-decoration-none"
-                        href="https://wa.me/923060705087?text=Hello%2C%20I%20have%20a%20question%20about%20your%20service.%20Can%20you%20help%20me%3F"
-                        target="_blank">
-                        <i class="fa-brands fa-whatsapp fs-2 text-muted"></i>
-                    </a>
-                    <a class="mx-2 text-decoration-none" href="mailto:m.naeemtahir@hotmail.com" target="_blank">
-                        <i class="fa-solid fa-envelope fs-2 text-muted"></i>
-                    </a>
-                    <a class="mx-2 text-decoration-none" href="https://www.linkedin.com/in/mohammadnaeemtahir/"
-                        target="_blank">
-                        <i class="fa-brands fa-linkedin fs-2 text-muted"></i>
-                    </a>
-                    <a class="mx-2 text-decoration-none" href="https://twitter.com/m_naeemtahir" target="_blank">
-                        <i class="fa-brands fa-twitter fs-2 text-muted"></i>
-                    </a>
-                    <a class="mx-2 text-decoration-none" href="https://github.com/mohammadnaeemtahir" target="_blank">
-                        <i class="fa-brands fa-github fs-2 text-muted"></i>
-                    </a>
+                <div class="row">
+                    <div class="col-md">
+                        <h2 class="text-white text-center my-5">
+                            Let's Work Togeather
+                        </h2>
+                        <div class="text-center contact-icons">
+                            <a class="mx-2 text-decoration-none"
+                                href="https://wa.me/923060705087?text=Hello%2C%20I%20have%20a%20question%20about%20your%20service.%20Can%20you%20help%20me%3F"
+                                target="_blank">
+                                <i class="fa-brands fa-whatsapp fs-2 text-muted"></i>
+                            </a>
+                            <a class="mx-2 text-decoration-none" href="mailto:m.naeemtahir@hotmail.com" target="_blank">
+                                <i class="fa-solid fa-envelope fs-2 text-muted"></i>
+                            </a>
+                            <a class="mx-2 text-decoration-none" href="https://www.linkedin.com/in/mohammadnaeemtahir/"
+                                target="_blank">
+                                <i class="fa-brands fa-linkedin fs-2 text-muted"></i>
+                            </a>
+                            <a class="mx-2 text-decoration-none" href="https://twitter.com/m_naeemtahir"
+                                target="_blank">
+                                <i class="fa-brands fa-twitter fs-2 text-muted"></i>
+                            </a>
+                            <a class="mx-2 text-decoration-none" href="https://github.com/mohammadnaeemtahir"
+                                target="_blank">
+                                <i class="fa-brands fa-github fs-2 text-muted"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md text-center mt-4">
+                        <a class="twitter-timeline" data-lang="en" data-width="400" data-height="350" data-theme="dark"
+                            href="https://twitter.com/m_naeemtahir?ref_src=twsrc%5Etfw" target="_blank">See my tweets
+                            @m_naeemtahir</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
                 </div>
 
             </div>
