--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="bg-main">
         <div class="welcome-section d-flex justify-content-center align-items-center flex-column text-white">
             <h1 class="mt-5 fa">Hey, I am <br class="d-md-none d-block"> Mohammad Naeem Tahir</h1>
-            <h3 class="fw-bold">a web developer</h3>
+            <h4 class="fw-bold text-center">I design user interfaces & develop websites.</h4>
         </div>
     </section>
 
@@ -97,8 +97,8 @@
                             alt="mohammad naeem tahir">
                         <div class="card-body">
                             <p class="card-text text-center">Front End Developer at <a
-                                    class="text-decoration-none text-muted fs-6 d-block"
-                                    href="https://alrighttech.com/" target="_blank">Alright Tech</a> </p>
+                                    class="text-decoration-none text-muted fs-6 d-block" href="https://alrighttech.com/"
+                                    target="_blank">Alright Tech</a> </p>
                         </div>
                     </div>
                 </div>
@@ -307,8 +307,9 @@
                         </div>
                     </div>
                     <div class="col-md text-center mt-4">
-                        <a class="twitter-timeline shadow-lg" data-lang="en" data-width="400" data-height="350" data-theme="dark"
-                            href="https://twitter.com/m_naeemtahir?ref_src=twsrc%5Etfw" target="_blank">See my tweets
+                        <a class="twitter-timeline shadow-lg" data-lang="en" data-width="400" data-height="350"
+                            data-theme="dark" href="https://twitter.com/m_naeemtahir?ref_src=twsrc%5Etfw"
+                            target="_blank">See my tweets
                             @m_naeemtahir</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
