--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="py-5 container">
                 <div class="row">
                     <div class="col-md">
-                        <h2 class="text-white text-center my-5">
+                        <h2 class="text-white text-center my-md-5">
                             Let's Work Togeather
                         </h2>
                         <div class="text-center contact-icons">
