--- a/index.html
+++ b/index.html
@@ -284,25 +284,25 @@
                             Let's Work Togeather
                         </h2>
                         <div class="text-center contact-icons">
-                            <a class="mx-2 text-decoration-none"
+                            <a class="mx-3 text-decoration-none"
                                 href="https://wa.me/923060705087?text=Hello%2C%20I%20have%20a%20question%20about%20your%20service.%20Can%20you%20help%20me%3F"
                                 target="_blank">
-                                <i class="fa-brands fa-whatsapp fs-2 text-muted"></i>
+                                <i class="fa-brands neonText fa-whatsapp fs-2 text-muted"></i>
                             </a>
-                            <a class="mx-2 text-decoration-none" href="mailto:m.naeemtahir@hotmail.com" target="_blank">
-                                <i class="fa-solid fa-envelope fs-2 text-muted"></i>
+                            <a class="mx-3 text-decoration-none" href="mailto:m.naeemtahir@hotmail.com" target="_blank">
+                                <i class="fa-solid neonText fa-envelope fs-2 text-muted"></i>
                             </a>
-                            <a class="mx-2 text-decoration-none" href="https://www.linkedin.com/in/mohammadnaeemtahir/"
+                            <a class="mx-3 text-decoration-none" href="https://www.linkedin.com/in/mohammadnaeemtahir/"
                                 target="_blank">
-                                <i class="fa-brands fa-linkedin fs-2 text-muted"></i>
+                                <i class="fa-brands neonText fa-linkedin fs-2 text-muted"></i>
                             </a>
-                            <a class="mx-2 text-decoration-none" href="https://twitter.com/m_naeemtahir"
+                            <a class="mx-3 text-decoration-none" href="https://twitter.com/m_naeemtahir"
                                 target="_blank">
-                                <i class="fa-brands fa-twitter fs-2 text-muted"></i>
+                                <i class="fa-brands neonText fa-twitter fs-2 text-muted"></i>
                             </a>
-                            <a class="mx-2 text-decoration-none" href="https://github.com/mohammadnaeemtahir"
+                            <a class="mx-3 text-decoration-none" href="https://github.com/mohammadnaeemtahir"
                                 target="_blank">
-                                <i class="fa-brands fa-github fs-2 text-muted"></i>
+                                <i class="fa-brands neonText fa-github fs-2 text-muted"></i>
                             </a>
                         </div>
                     </div>
