--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <h2 class="text-white text-center my-md-5">
                             Let's Work Togeather
                         </h2>
-                        <div class="text-center contact-icons">
+                        <div class="text-center contact-icons my-5">
                             <a class="mx-3 text-decoration-none"
                                 href="https://wa.me/923060705087?text=Hello%2C%20I%20have%20a%20question%20about%20your%20service.%20Can%20you%20help%20me%3F"
                                 target="_blank">
