--- a/index.html
+++ b/index.html
@@ -116,33 +116,10 @@
                         by <br class="d-none d-md-block"> profession, a designer in
                         my free time and a perpetual student.</p>
                     <p class="text-white">You can download my resume from here:
-                        <!-- Button trigger modal -->
-                        <a class="text-decoration-none text-muted" type="button" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Mohammad Naeem Tahir (CV)</a>
+                        
+                        <a href="./assets/docs/mohammad-naeem-tahir-resume.pdf" download
+                            class="text-decoration-none text-muted">Mohammad Naeem Tahir (CV)</a>
                     </p>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header border-0">
-                                    <h5 class="modal-title" id="exampleModalLabel">Oops!</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    Resume to be uploaded yet.
-                                </div>
-                                <div class="modal-footer border-0">
-                                    <button type="button" class="btn btn-primary border-0 btn-sm px-5"
-                                        data-bs-dismiss="modal">OK</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
                     <p class="text-white">I am a student of BS Computer Science. Besides science it is an art as
                         well.
                         This dual nature becomes much
