--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="row">
                     <div class="col-md">
                         <h2 class="text-white text-center my-md-5">
-                            Let's Work Togeather
+                            Let's Work Together
                         </h2>
                         <div class="text-center contact-icons my-5">
                             <a class="mx-3 text-decoration-none"
