--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         </h2>
                         <div class="text-center contact-icons my-5">
                             <a class="mx-3 text-decoration-none"
-                                href="https://wa.me/923184133228?text=Hello%2C%20how%20may%20I%20help%20you%3F"
+                                href="https://wa.me/923184133228?text=Hello%2C%20I%20have%20a%20question%20about%20your%20services.%20Can%20you%20please%20help%20me%3F"
                                 target="_blank">
                                 <i class="fa-brands neonText fa-whatsapp fs-2 text-muted"></i>
                             </a>
