--- a/moocs.html
+++ b/moocs.html
@@ -298,7 +298,8 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Muhammad Naeem Tahir | No copyrights reserved.</div>
+            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.</div>
+
         </div>
     </footer>
     <!-- Bootstrap core JS-->
